# jupyterlab_demo

./: readme.md  useful_commands.json
dongwu/: url.txt
launcher/: package-lock.json
launcher/jupyterlab_examples_launcher/labextension/: build_log.json  package.json
launcher/src/: button.ts  func_composition_factor.ts  index.ts
launcher/style/: base.css  css样式.html
left_demo/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
left_demo/.github/workflows/: build.yml  (+1 more)
left_demo/src/: index.ts
py_left_widget/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
py_left_widget/.github/workflows/: build.yml  check-release.yml
py_left_widget/command_work_file/:  amplitude_预处理.ipynb   amplitude试验.ipynb   动态生成notebook.ipynb   新振幅因子.ipynb  Basic_and_VaR.ipynb  fundamental_data.ipynb  gh.ipynb  group_backtest.json  ipytry.ipynb  sample_nb.ipynb  test_py.ipynb  undefined.ipynb  回测_1.ipynb  新回测1  自定义回测模板_1.ipynb  逐bar回测模板_1.ipynb  量化回测自动生成代码.ipynb
py_left_widget/src/: backtest_manage.tsx  backtest_manage3.ts  close_table.tsx  create_bt_custom.json  echart_demo.tsx  efficient_cta_future_test_day.py  factor_repo.ts  help_doc.ts  index.ts  research_report.tsx  risk_performance.tsx  stock_risk.tsx  test.csv  upload_btn.tsx
py_left_widget/src/public_factor/: amplitude.tsx  factor_backtest.json  factor_widgets.tsx  public_asset_stg.tsx
py_left_widget/style/: base.css
(+10 files in other folders)
