[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["py_left_widget/labextension/static/style.js"]
ensured-targets = ["py_left_widget/labextension/static/style.js", "py_left_widget/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["py_left_widget/labextension/**", "yarn.lock", ".*", "package-lock.json"]
